# EnvForage

./: .env.example  .env.prod.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  GUI_INSTALLER_BLUEPRINT.md  README.md  SECURITY.md  SUPPORT.md  TASKS.md  TROUBLESHOOTING.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  report.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  01e26e1d6a52_add_profile_status_index.py  21fe8cc61865_add_uninstall_feedback_table.py  5447_add_compatibility_matrices.py  85bfc532a74c_add_deleted_at_to_profile_packages.py  a855f3a2d70d_add_missing_foreign_keys.py  ac38511aa175_merge.py  compress_generated_scripts_content.py  d912a76f23b1_add_security_score_to_generated_scripts.py  f113b99acf31_add_missing_foreign_keys_ai_session.py
backend/app/: config.py  database.py  main.py  worker.py
backend/app/ai/: models.py  service.py
backend/app/api/: deps.py
backend/app/compatibility/: resilience.py  resolver.py
backend/app/core/: cache.py  database.py  events.py  handlers.py  jwt.py  logging.py  redis.py  secrets_validation.py  security.py  stream_tracker.py  task_queue.py  uow.py  versioning.py
backend/app/db/: indexes.py  seed.py
backend/app/middleware/: blacklist.py  cors.py  metrics.py  payload_size.py  rate_limit.py  sanitizer.py  security_headers.py  sql_sanitizer.py  timing.py
backend/app/models/: __init__.py  feedback.py  matrix.py  profile.py  script_job.py  user.py  webhook.py
backend/app/plugins/: base.py  loader.py  sample_audit.py  sandbox.py
backend/app/recommendation/: __init__.py  (+1 more)
backend/scripts/: fetch_pypi_metadata.py  seed_feedback.py  update_python_matrix.py  validate_profiles.py
backend/seeds/: cuda_matrix.yaml  profiles.yaml
backend/tests/: conftest.py  test_payload_size_middleware.py  test_profile_soft_delete.py  test_rocm_matrix.py  test_safety_filter_fuzz.py
(+375 files in other folders)
