[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envforage-backend"
version = "2.1.0"
description = "EnvForage Backend API — ML Environment Provisioning Platform"
requires-python = ">=3.11"
dependencies = [
    "prometheus-client>=0.20.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "jinja2>=3.1.4",
    "bashlex>=0.18",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "PyJWT>=2.8.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "celery>=5.4.0",
    "packaging>=23.0",
    "structlog>=24.1.0",
    "python-magic>=0.4.27",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "locust>=2.31.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "black>=26.5.1",
    "ruff>=0.15.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
    "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402", "E701"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
